--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </section>
 
     <div class = "post-filter container">
-        <a href="/pages/hostels.html" class="homelinks">
+        <a href="/pages/hostels.html" class="homelinks" target="_blank">
         <span class="filter-item " data-filter='hostel'>&nbsp;Hostels&nbsp;</span> </a>
-        <a href="/pages/foodjoints.html" class="homelinks">
+        <a href="/pages/foodjoints.html" class="homelinks" target="_blank">
         <span class="filter-item " data-filter='food'>&nbsp;Food Joints&nbsp;</span></a>
-        <a href="/pages/clubs.html" class="homelinks">
+        <a href="/pages/clubs.html" class="homelinks" target="_blank">
         <span class="filter-item " data-filter='clubs'>&nbsp;Clubs&nbsp;</span></a>
-        <a href="/pages/expensetracker.html" class="homelinks">
+        <a href="/pages/expensetracker.html" class="homelinks" target="_blank">
         <span class="filter-item " data-filter='expense'>&nbsp;Expense Tracker&nbsp;</span></a>
     </div>
     
