--- a/pages/hostels.html
+++ b/pages/hostels.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hostels</title>
+    <title>Hostels</title>
     <link rel="stylesheet" href="../css/expensetracker.css">
+    <link rel="icon" type="image/jpg" href="faviconfinal.png">
 </head>
 <body>
     
