--- a/pages/foodjoints.html
+++ b/pages/foodjoints.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hostels</title>
+    <title>Food Joints</title>
     <link rel="stylesheet" href="../css/foodjoints.css">
 </head>
 <body>
