--- a/pages/hostels.html
+++ b/pages/hostels.html
@@ -4,10 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostels</title>
-    <link rel="stylesheet" href="../css/expensetracker.css">
-    <link rel="icon" type="image/jpg" href="faviconfinal.png">
+    <link rel="stylesheet" href="../css/hostels.css">
+    <script src="https://kit.fontawesome.com/97577b9435.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/jpg" href="../faviconfinal.png">
+    
 </head>
 <body>
+    <header>
+        <div class="nav container">
+        <a href="../index.html" class="logo">PICT<span>Connect</span></a>
+        <a href="/pages/login.html" class="login">Login</a>
+        </div>
+    </header>
     
+
+    <div>
+        <p style="font-size: larger; font-weight: 450; padding-left: 70px; padding-left: 70px;" class="info"><br><br>PictConnect  helps you discover nearby living options that suit your choices and budget. Say goodbye to endless hours of hostel hunting and hello to your new home away from home!</p>
+    </div>
+    <div class="girlsboys container">
+        <a href="#GH" class="gblink">Girls' Hostels</a>
+        <a href="#BH" class="gblink">Boys' Hostels</a>
+    </div>
+
+    <!-- girls hostels -->
+<section id="GH">
+    <h1 style="text-align: center; margin-top: 2rem; font-size: 35px; ">GIRLS' HOSTELS</h1>
+    <section class="basic-grid">
+        <!-- 1st -->
+        <div class="card">
+            <img src="../images/gh1.avif" height="300px" width="300px">
+            <p style="text-align: center; font-size: large; font-weight: bold;">Shraddha Niketan Girls Hostel</p>
+            <a href="https://www.justdial.com/Pune/Shraddha-Niketan-Girls-Hostel-Opposite-Bharti-Vidyapeeth-Katraj/020PXX20-XX20-120718165853-B9X1_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+        </div>
+        <!-- 2nd -->
+        <div class="card">
+            <img src="../images/gh2.avif" height="300px" width="250px">
+            <p style="text-align: center; font-size: large; font-weight: bold;">Siddhivinayak Girls Hostel</p>
+            <a href="https://www.justdial.com/Pune/Shree-Siddhivinayak-Girls-Hostel-Near-Bharti-Vidyapeeth-Behind-Katraj-Dairy-Opposite-Rajaram-Gas-Agency-Katraj/020PXX20-XX20-131122135438-J3J7_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+        </div>
+        <!-- 3rd -->
+        <div class="card">
+            <img src="../images/gh3.jpg" height="300px" width="240px">
+            <p style="text-align: center; font-size: large; font-weight: bold;">Friends Girls Hostel</p>
+            <a href="https://www.justdial.com/Pune/Friends-Girls-Hostel-Near-PICT-College-Katraj/020PXX20-XX20-230827113404-H9W4_BZDET?ncatid=10852702&area=PICT%20College%20Katraj&search=Top%20Hostel%20For%20Girl%20Students%20near%20PICT%20College-Katraj,%20Pune&mncatname=Hostel%20For%20Girl%20Students&abd_btn=&abd_heading=&bd=1&" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+        </div>
+        <!-- 4th -->
+        <div class="card">
+            <img src="../images/gh4.avif" height="300px" width="250px">
+            <p style="text-align: center; font-size: large; font-weight: bold;">Vaishnavi Niketan Girls Hostel</p>
+            <a href="https://www.justdial.com/Pune/Vaishnavi-Niketan-Ladies-Hostel-Opposite-Bharati-Hospital-Near-HAMY-Steel-Shop-Dhankawadi/020PXX20-XX20-190709140449-V1L8_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+        </div>
+        <!-- 5th -->
+        <div class="card">
+            <img src="../images/gh5.jpeg" height="300px" width="280px">
+            <p style="text-align: center;font-size: large; font-weight: bold;">Vasundhara Girls Hostel</p>
+            <a href="https://www.justdial.com/Pune/Vasundhara-Girls-Hostel-Behind-Bharati-Vidyapeeth-Opposite-Icchapurti-Ganesh-Mandir-Katraj/020PXX20-XX20-131126191216-A9C7_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+        </div>
+    </section>
+</section>
+
+<!-- boys hostels -->
+<section id="BH">
+<h1 style="text-align: center; margin-top: 2rem; font-size: 35px;">BOYS' HOSTELS</h1>
+<section class="basic-grid">
+    <!-- 1st -->
+    <div class="card">
+        <img src="../images/gh1.avif" height="300px" width="300px">
+        <p style="text-align: center; font-size: large; font-weight: bold;">Shraddha Niketan Girls Hostel</p>
+        <a href="https://www.justdial.com/Pune/Folk-Residency-Boys-Hostel-Opposite-Pict-College-Bharati-Vidyapeeth-University-Back-Gate-Shriram-Nagar-Katraj/020PXX20-XX20-180205191323-I9F3_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+    </div>
+    <!-- 2nd -->
+    <div class="card">
+        <img src="../images/gh2.avif" height="300px" width="250px">
+        <p style="text-align: center; font-size: large; font-weight: bold;">Siddhivinayak Girls Hostel</p>
+        <a href="https://www.justdial.com/Pune/Shree-Siddhivinayak-Girls-Hostel-Near-Bharti-Vidyapeeth-Behind-Katraj-Dairy-Opposite-Rajaram-Gas-Agency-Katraj/020PXX20-XX20-131122135438-J3J7_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+    </div>
+    <!-- 3rd -->
+    <div class="card">
+        <img src="../images/gh3.jpg" height="300px" width="240px">
+        <p style="text-align: center; font-size: large; font-weight: bold;">Friends Girls Hostel</p>
+        <a href="https://www.justdial.com/Pune/Friends-Girls-Hostel-Near-PICT-College-Katraj/020PXX20-XX20-230827113404-H9W4_BZDET?ncatid=10852702&area=PICT%20College%20Katraj&search=Top%20Hostel%20For%20Girl%20Students%20near%20PICT%20College-Katraj,%20Pune&mncatname=Hostel%20For%20Girl%20Students&abd_btn=&abd_heading=&bd=1&" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+    </div>
+    <!-- 4th -->
+    <div class="card">
+        <img src="../images/gh4.avif" height="300px" width="250px">
+        <p style="text-align: center; font-size: large; font-weight: bold;">Vaishnavi Niketan Girls Hostel</p>
+        <a href="https://www.justdial.com/Pune/Vaishnavi-Niketan-Ladies-Hostel-Opposite-Bharati-Hospital-Near-HAMY-Steel-Shop-Dhankawadi/020PXX20-XX20-190709140449-V1L8_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+    </div>
+    <!-- 5th -->
+    <div class="card">
+        <img src="../images/gh5.jpeg" height="300px" width="280px">
+        <p style="text-align: center;font-size: large; font-weight: bold;">Vasundhara Girls Hostel</p>
+        <a href="https://www.justdial.com/Pune/Vasundhara-Girls-Hostel-Behind-Bharati-Vidyapeeth-Opposite-Icchapurti-Ganesh-Mandir-Katraj/020PXX20-XX20-131126191216-A9C7_BZDET" style="color:#f16100; text-decoration-line: underline; font-size: medium;"><i class="fa-solid fa-paperclip" style="color: #ffa263;"></i> JustDial</a>
+    </div>
+</section>
+</section>
+
+<script src="scroll.js"></script>
+
 </body>
 </html>
